--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Presidential Election Campaign Finance"
-author: "Sarah Edelson, Matthew Perkins, Seamus Lawton"
-date: "April 27, 2021"
+title: "Title"
+author: "Names"
+date: "Date"
 output:
   rmdformats::readthedown:s
     thumbnails: false
