--- a/BlogDataWrangling.Rmd
+++ b/BlogDataWrangling.Rmd
@@ -10,7 +10,40 @@ library(tidyverse)
 library(rvest)
 library(here)
 library(readr)
+
+library(datasets)
+library(mdsr)
+library(gapminder)
 ```
 
 ```{r}
-# Reading in
+# Create Individual Contributions Map
+individual_contributions <- read_csv(here("Data", "IndividualContributions.csv"))
+
+individual_contributions <- individual_contributions %>%
+  janitor::clean_names() %>%
+  mutate(State = state)
+
+
+state_info <- data.frame(state_full = tolower(state.name) , State = state.abb,
+                         Region = state.region)
+
+usa_states <- map_data(map = "state"
+, region = ".")
+
+contributions_map <- individual_contributions %>%
+  left_join(state_info, by = "State") %>%
+  right_join(usa_states, by = c("state_full" = "region"))
+
+ggplot(contributions_map, aes(x = long, y = lat, group = group,
+                              fill = bloomberg_michael_r)) +
+  geom_polygon(color = "white") +
+  theme_void() +
+  coord_fixed(ratio = 1.3) +
+  labs(fill = "Individual Contributions for Michael Bloomberg") +
+  theme(legend.position="bottom") +
+  scale_fill_distiller(palette = "BuPu", direction = "horizantle")
+
+
+
+```
