--- a/BlogDataWranglingSarah.Rmd
+++ b/BlogDataWranglingSarah.Rmd
@@ -61,22 +61,41 @@ contributions_map <- individual_contributions %>%
 # Create Network for independent expenditures
 independent_expenditures <- read_csv(here("Data", "IndependentExpenditures.csv"))
 
+independent_expenditures <- independent_expenditures %>%
+  mutate(candidate_cleaned_ie = (case_when(
+         str_detect(candidate_name, "BIDEN, JOSEPH R JR") ~ "Joe Biden",
+         str_detect(candidate_name, "BLOOMBERG, MICHAEL R.") ~ "Michael Bloomberg",
+         str_detect(candidate_name, "HARRIS, KAMALA D.") ~ "Kamala Harris",
+         str_detect(candidate_name, "KLOBUCHAR, AMY J.") ~ "Amy Klobuchar",
+         str_detect(candidate_name, "SANDERS, BERNARD") ~ "Bernie Sanders",
+         str_detect(candidate_name, "STEYER, TOM") ~ "Tom Steyer",
+         str_detect(candidate_name, "TRUMP, DONALD J.") ~ "Donald Trump",
+         str_detect(candidate_name, "WARREN, ELIZABETH") ~ "Elizabeth Warren",
+         str_detect(candidate_name, "YANG, ANDREW MR.") ~ "Andrew Yang"
+         )))
+  
+
 independent_expenditures_large <- independent_expenditures %>%
-  select(committee_name, candidate_name, total, support_oppose_indicator) %>%
+  select(committee_name, candidate_cleaned_ie, total, support_oppose_indicator) %>%
   filter(total >= 10000000)  %>%
-  filter(candidate_name == "TRUMP, DONALD J." | candidate_name == "BIDEN, JOSEPH R JR")
+  filter(candidate_cleaned_ie == "Donald Trump" | candidate_cleaned_ie == "Joe Biden")
 
 g_expenditures <- graph_from_data_frame(independent_expenditures_large, directed = TRUE)
 
-expenditures_network <- ggnetwork(g_expenditures)
+expenditures_network <- ggnetwork(g_expenditures) %>%
+  mutate(candidate = case_when(name == "Donald Trump" ~ "Donald Trump", 
+                               name == "Joe Biden" ~ "Joe Biden",
+                               TRUE ~ ""))
 
 # Color by support or oppose
 ggplot(data = expenditures_network, aes(x = x, y = y, xend = xend, yend = yend)) +
-  geom_edges(arrow=arrow(type="closed", length=unit(2,"pt")),
-  aes(size = total, color = support_oppose_indicator)) + geom_nodes() +
-  geom_nodelabel(aes(label = name), size = 3) +
+  geom_edges(aes(size = total, color = support_oppose_indicator)) + geom_nodes() +
+  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 2) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 2) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 2) +
   theme_blank() +
-  labs(size = "Donation Size") +
+  scale_color_manual(values=c("red2", "slategray")) +
+  labs(size = "Contribution Size") +
   labs(color = "Support or Oppose Candidate")
 
 ```
