--- a/BlogDataWranglingSarah.Rmd
+++ b/BlogDataWranglingSarah.Rmd
@@ -91,13 +91,18 @@ expenditures_network <- ggnetwork(g_expenditures) %>%
 
 # Color by support or oppose
 ggplot(data = expenditures_network, aes(x = x, y = y, xend = xend, yend = yend)) +
-  geom_edges(aes(size = total, color = support_oppose_indicator)) + geom_nodes() +
-  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 2) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 2) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 2) +
+  geom_edges(aes(size = total/1000000, color = support_oppose_indicator)) + geom_nodes() +
+  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 1.1) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 4) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 4) +
   theme_blank() +
   scale_color_manual(values=c("red2", "slategray")) +
-  labs(size = "Contribution Size", labels = comma) +
-  labs(color = "Support or Oppose Candidate")
+  labs(size = "Contribution Size (millions)") +
+  labs(color = "Support or Oppose Candidate") +
+  ggtitle("Independent Expenditures Over 10 million") +
+  theme(legend.title = element_text(size = 8)) +
+  theme(legend.text = element_text(size = 8)) +
+  theme(legend.position = "bottom")
+  
 
 ```
