--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,8 @@ title: "Title"
 author: "Sarah Edelson, Seamus Lawton, Matthew Perkins"
 date: "Date"
 output:
-  rmdformats::readthedown:s
+  prettydoc::html_pretty:
+    theme: architect
     thumbnails: false
     highlight: NULL
 ---
