--- a/BlogDataWranglingSarah.Rmd
+++ b/BlogDataWranglingSarah.Rmd
@@ -72,9 +72,9 @@ contributions_map <- individual_contributions %>%
 
 ```{r}
 # Create Network for independent expenditures
-independent_expenditures_raw <- read_csv(here("Data", "IndependentExpenditures.csv"))
+independent_expenditures <- read_csv(here("Data", "IndependentExpenditures.csv"))
 
-independent_expenditures <- independent_expenditures_raw %>%
+independent_expenditures <- independent_expenditures %>%
   mutate(candidate_cleaned_ie = (case_when(
          str_detect(candidate_name, "BIDEN, JOSEPH R JR") ~ "Joe Biden",
          str_detect(candidate_name, "BLOOMBERG, MICHAEL R.") ~ "Michael Bloomberg",
@@ -89,10 +89,32 @@ independent_expenditures <- independent_expenditures_raw %>%
   
 
 independent_expenditures_large <- independent_expenditures %>%
-  select(committee_name, candidate_cleaned_ie, total, support_oppose_indicator) %>%
+  mutate(committee_cleaned = (case_when(
+         str_detect(committee_name, "DEFENDING DEMOCRACY TOGETHER") ~ (paste("DEFENDING", "DEMOCRACY", "TOGETHER", sep="\n")),
+         str_detect(committee_name, "AB PAC") ~ "AB PAC",
+         str_detect(committee_name, "THE LINCOLN PROJECT") ~ "THE LINCOLN PROJECT",
+         str_detect(committee_name, "GREAT AMERICA PAC") ~ "GREAT AMERICA PAC.",
+         str_detect(committee_name, "THE COMMITTEE TO DEFEND THE PRESIDENT") ~ (paste("THE COMMITTEE", "TO DEFEND", "THE PRESIDENT", sep = "\n")),
+         str_detect(committee_name, "LCV VICTORY FUND") ~ "LCV VICTORY FUND",
+         str_detect(committee_name, "PRIORITIES USA ACTION") ~ "PRIORITIES USA ACTION",
+         str_detect(committee_name, "FF PAC") ~ "FF PAC",
+         str_detect(committee_name, "INDEPENDENCE USA PAC") ~ "INDEPENDENCE USA PAC",
+         str_detect(committee_name, "BLACK PAC") ~ "BLACK PAC",
+         str_detect(committee_name, "RESTORATION PAC") ~ "RESTORATION PAC",
+         str_detect(committee_name, "AMERICA FIRST ACTION, INC.") ~ (paste("AMERICA FIRST","ACTION, INC.", sep="\n")),
+         str_detect(committee_name, "UNITE THE COUNTRY") ~ "UNITE THE COUNTRY",
+         str_detect(committee_name, "NRA VICTORY FUND, INC.") ~ "NRA VICTORY FUND, INC.",
+         str_detect(committee_name, "CLUB FOR GROWTH ACTION") ~ "CLUB FOR GROWTH ACTION",
+         str_detect(committee_name, "NEXTGEN CLIMATE ACTION COMMITTEE") ~ (paste("NEXTGEN CLIMATE", "ACTION COMMITTEE", sep="\n")),
+         str_detect(committee_name, "PRESERVE AMERICA PAC") ~ "PRESERVE AMERICA PAC")
+         ))
+
+independent_expenditures_large <- independent_expenditures_large %>%
+  select(committee_cleaned, candidate_cleaned_ie, total, support_oppose_indicator) %>%
   filter(total >= 10000000)  %>%
   filter(candidate_cleaned_ie == "Donald Trump" | candidate_cleaned_ie == "Joe Biden")
 
+set.seed(15)
 g_expenditures <- graph_from_data_frame(independent_expenditures_large, directed = TRUE)
 
 expenditures_network <- ggnetwork(g_expenditures) %>%
@@ -100,22 +122,22 @@ expenditures_network <- ggnetwork(g_expenditures) %>%
                                name == "Joe Biden" ~ "Joe Biden",
                                TRUE ~ ""))
 
+
 # Color by support or oppose
 ggplot(data = expenditures_network, aes(x = x, y = y, xend = xend, yend = yend)) +
   geom_edges(aes(size = total/1000000, color = support_oppose_indicator)) + geom_nodes() +
-  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 1.5) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 4) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 4) +
+  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 10) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 14) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 14) +
   theme_blank() +
   scale_color_manual(values=c("red2", "slategray")) +
   labs(size = "Contribution Size (millions)") +
   labs(color = "Support or Oppose Candidate") +
   ggtitle("Independent Expenditures Over 10 million") +
-  theme(legend.title = element_text(size = 8)) +
-  theme(legend.text = element_text(size = 8)) +
+  theme(plot.title = element_text(size = 30)) +
+  theme(legend.title = element_text(size = 30)) +
+  theme(legend.text = element_text(size = 30)) +
   theme(legend.position = "bottom")
-  
-
 ```
 
 ```{r}
