--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ library(gapminder)
 library(igraph)
 library(maps)
 library(scales)
+library(DT)
 ```
 
 # Header 1
@@ -53,24 +54,13 @@ summary(cars)
 
 Let's clean up the format of that output:
 
-```{r pretty, echo=FALSE, warning=FALSE, message=FALSE}
-library(kableExtra)
-summary(cars) %>%
-  kable(col.names = c("Speed", "Distance")
-        , row.names = F) %>%
-  kable_styling(bootstrap_options = "striped"
-                , full_width = F) %>%
-  row_spec(0, bold = T, underline = T) %>%
-  column_spec(1:2, width = "1.5in") 
-```
-
 In a study from the 1920s, fifty cars were used to see how the speed of the car and the distance taken to stop were related.  Speeds ranged between `r min(cars$speed)` and `r max(cars$speed)` mph.  Distances taken to stop ranged between `r min(cars$dist)` and `r max(cars$dist)` feet, with the middle 50% falling between `r as.numeric(quantile(cars$dist)[2])` and `r as.numeric(quantile(cars$dist)[4])` feet.  
 
 You can also embed plots as normal, for example:
 ## Independent Expenditures for Joe Biden & Donald Trump
 
 
-```{r figure1, echo=FALSE}
+```{r fig.width = 35, fig.height = 15, message = FALSE, echo=FALSE}
 independent_expenditures <- read_csv(here("Data", "IndependentExpenditures.csv"))
 
 independent_expenditures <- independent_expenditures %>%
@@ -88,10 +78,32 @@ independent_expenditures <- independent_expenditures %>%
   
 
 independent_expenditures_large <- independent_expenditures %>%
-  select(committee_name, candidate_cleaned_ie, total, support_oppose_indicator) %>%
+  mutate(committee_cleaned = (case_when(
+         str_detect(committee_name, "DEFENDING DEMOCRACY TOGETHER") ~ (paste("DEFENDING", "DEMOCRACY", "TOGETHER", sep="\n")),
+         str_detect(committee_name, "AB PAC") ~ "AB PAC",
+         str_detect(committee_name, "THE LINCOLN PROJECT") ~ "THE LINCOLN PROJECT",
+         str_detect(committee_name, "GREAT AMERICA PAC") ~ (paste("GREAT AMERICA", "PAC.", sep="\n")),
+         str_detect(committee_name, "THE COMMITTEE TO DEFEND THE PRESIDENT") ~ (paste("THE COMMITTEE", "TO DEFEND", "THE PRESIDENT", sep = "\n")),
+         str_detect(committee_name, "LCV VICTORY FUND") ~ (paste("LCV VICTORY", "FUND", sep="\n")),
+         str_detect(committee_name, "PRIORITIES USA ACTION") ~ (paste("PRIORITIES USA", "ACTION", sep="\n")),
+         str_detect(committee_name, "FF PAC") ~ "FF PAC",
+         str_detect(committee_name, "INDEPENDENCE USA PAC") ~ "INDEPENDENCE USA PAC",
+         str_detect(committee_name, "BLACK PAC") ~ "BLACK PAC",
+         str_detect(committee_name, "RESTORATION PAC") ~ "RESTORATION PAC",
+         str_detect(committee_name, "AMERICA FIRST ACTION, INC.") ~ "AMERICA FIRST ACTION, INC.",
+         str_detect(committee_name, "UNITE THE COUNTRY") ~ "UNITE THE COUNTRY",
+         str_detect(committee_name, "NRA VICTORY FUND, INC.") ~ (paste("NRA VICTORY", "FUND, INC.", sep="\n")),
+         str_detect(committee_name, "CLUB FOR GROWTH ACTION") ~ (paste("CLUB FOR", "GROWTH ACTION", sep="\n")),
+         str_detect(committee_name, "NEXTGEN CLIMATE ACTION COMMITTEE") ~ (paste("NEXTGEN", "CLIMATE", "ACTION", "COMMITTEE", sep="\n")),
+         str_detect(committee_name, "PRESERVE AMERICA PAC") ~ paste("PRESERVE AMERICA", "PAC", sep="\n"))
+         ))
+
+independent_expenditures_large <- independent_expenditures_large %>%
+  select(committee_cleaned, candidate_cleaned_ie, total, support_oppose_indicator) %>%
   filter(total >= 10000000)  %>%
   filter(candidate_cleaned_ie == "Donald Trump" | candidate_cleaned_ie == "Joe Biden")
 
+set.seed(15)
 g_expenditures <- graph_from_data_frame(independent_expenditures_large, directed = TRUE)
 
 expenditures_network <- ggnetwork(g_expenditures) %>%
@@ -99,24 +111,34 @@ expenditures_network <- ggnetwork(g_expenditures) %>%
                                name == "Joe Biden" ~ "Joe Biden",
                                TRUE ~ ""))
 
+
 # Color by support or oppose
 ggplot(data = expenditures_network, aes(x = x, y = y, xend = xend, yend = yend)) +
   geom_edges(aes(size = total/1000000, color = support_oppose_indicator)) + geom_nodes() +
-  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 1.5) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 4) +
-  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 4) +
+  geom_nodelabel(data = filter(expenditures_network, name!= "Donald Trump" & name != "Joe Biden"), aes(label = name), color = "black", size = 10) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Donald Trump"), aes(label = name), color = "blue", size = 14) +
+  geom_nodelabel(data = filter(expenditures_network, name == "Joe Biden"), aes(label = name), color = "blue", size = 14) +
   theme_blank() +
   scale_color_manual(values=c("red2", "slategray")) +
   labs(size = "Contribution Size (millions)") +
   labs(color = "Support or Oppose Candidate") +
   ggtitle("Independent Expenditures Over 10 million") +
-  theme(legend.title = element_text(size = 8)) +
-  theme(legend.text = element_text(size = 8)) +
+  theme(plot.title = element_text(size = 40)) +
+  theme(legend.title = element_text(size = 40)) +
+  theme(legend.text = element_text(size = 40)) +
   theme(legend.position = "bottom")
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
+```{r pretty, echo=FALSE, warning=FALSE, message=FALSE, fig.width = 30}
+independent_expenditures %>%
+  select(candidate_name, committee_name, total, support_oppose_indicator) %>%
+  arrange(desc(total)) %>%
+  datatable(
+    head(iris),
+    caption = "All Independent Expenditures")
+```
 
 ## Including links and images
 
