--- a/index.Rmd
+++ b/index.Rmd
@@ -145,7 +145,7 @@ independent_expenditures %>%
 
 ## Individual Contributions
 ```{r}
-knitr::include_app("https://sedelson31.shinyapps.io/IndividualContributionsMap/?_ga=2.177633829.1230189455.1620406833-1360701694.1615303791")
+knitr::include_app("http://sedelson31.shinyapps.io/IndividualContributionsMap")
 ```
 
 
