--- a/index.Rmd
+++ b/index.Rmd
@@ -57,8 +57,8 @@ In a study from the 1920s, fifty cars were used to see how the speed of the car 
 
 You can also embed plots as normal, for example:
 
-## $14 billion
-We live in a world where money and politics are largely intertwined. This fact is starkly apparent when examining the net worth of certain 2020 presidential candidates. Michael Bloomberg, who has a net worth of \$59 billion, spent over \$1 billion on his own candidacy. Tom Steyer, a former hedge fund manager and billonaire, also made a run for President. The 45th President, Donald Trump, made a fortune through his real estate empire. The 2020 election, including both presidential and congressional races, cost a record-breaking $14 billion. Aside from candidates' own wealth, **where is the rest of this campaign money coming from?** We set out to address questions pertaining to campaign finance data, seeking to understand who is making political donations and to whom they are supporting.
+## Introduction
+We live in a world where money and politics are largely intertwined. This fact is starkly apparent when examining the net worth of certain 2020 presidential candidates. Michael Bloomberg, who has a net worth of \$59 billion, spent over \$1 billion on his own candidacy. Tom Steyer, a former hedge fund manager and billionaire, also made a run for President. The 45th President, Donald Trump, made a fortune through his real estate empire, allocating millions to his campaign. The 2020 election, including both presidential and congressional races, cost a record-breaking $14 billion. Aside from candidates' own wealth, **where is the rest of this campaign money coming from?** We set out to address questions pertaining to 2020 election finance data, seeking to understand who is making political donations and to whom they are supporting.
 
 ## Independent Expenditures for Joe Biden & Donald Trump
 
@@ -140,6 +140,8 @@ The network indicates that:
 - Two organizations spent money supporting one candidate and opposing the other: the FF Pac made expenditures supporting Joe Biden and opposing Donald Trump, while Priorities USA Action did the opposite.
 - Candidate priorities align with donors. Conservatives have historically been large advocates for gun rights, explaining why the NRA Victory Fund would oppose Biden. Democrats are more invested in combating problems pertaining to climate change and environmental justice, leading the NextGen Climate Action Committee to support Biden.
 
+Moving forward, it would be interesting to examine how the number of PACs/organizations and their missions differ at different levels of expenditures.
+
 ## All Independent Expenditures
 While the network only draws attention to the largest expenditures for the two largest candidate, explore this interactive table to learn more about expenditures of all sizes and to all candidates.
 
@@ -156,7 +158,9 @@ independent_expenditures %>%
 ```{r}
 knitr::include_app("http://sedelson31.shinyapps.io/IndividualContributionsMap")
 ```
+Besides PACs and Super PACs, a significant portion of campaign spending comes from individual contributions. Which candidates amassed the most support from the general public, and which states spent the most on individual contributions?
 
+This map only conveys totals for each state, but we would be interested in further analyzing the average contribution across states, or even more specific municipal levels, and other demographic factors influencing donations. For example, we could test the belief that lower-income, rural people tend to support Trump by examining where many of the people that donated up to $20 lived.
 
 ## Including links and images
 
@@ -165,6 +169,8 @@ You can include [Links](https://www.datadreaming.org/post/r-markdown-theme-galle
 You can embed a gif.
 
 ![pugs](https://media.giphy.com/media/XHVmD4RyXgSjd8aUMb/giphy.gif)
+
+### Limitations
 
 ### Citations
 
